<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProductActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/create_product_barcode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/style_border"
            android:ems="10"
            android:hint="@string/create_product_code"
            android:inputType="text" />

        <EditText
            android:id="@+id/create_product_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/style_border"
            android:ems="10"
            android:hint="@string/create_product_name_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/create_product_brand"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/style_border"
            android:ems="10"
            android:hint="@string/create_product_brand"
            android:inputType="text" />


        <EditText
            android:id="@+id/create_product_price"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/style_border"
            android:ems="10"
            android:hint="@string/create_product_price"
            android:inputType="number|numberDecimal" />

        <EditText
            android:id="@+id/create_product_description"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/style_border"
            android:ems="10"
            android:hint="@string/create_product_description"
            android:inputType="text|textLongMessage|textMultiLine" />

        <EditText
            android:id="@+id/create_product_color"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/style_border"
            android:ems="10"
            android:hint="@string/create_product_color"
            android:inputType="text" />

        <EditText
            android:id="@+id/create_product_material"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/style_border"
            android:ems="10"
            android:hint="@string/create_product_material"
            android:inputType="text" />


        <EditText
            android:id="@+id/create_product_size"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/style_border"
            android:ems="10"
            android:hint="@string/create_product_size"
            android:inputType="text" />

        <EditText
            android:id="@+id/create_product_amount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/style_border"
            android:ems="10"
            android:hint="@string/create_product_amount"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/create_product_our_price"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/style_border"
            android:ems="10"
            android:hint="@string/create_product_our_price"
            android:inputType="number|numberDecimal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/create_product_image_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="0" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_product_images_count" />
        </LinearLayout>

        <Button
            android:id="@+id/create_product_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/style_border"
            android:onClick="addImages"
            android:text="@string/create_product_add_image" />

        <Button
            android:id="@+id/create_product_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/style_border"
            android:onClick="createProduct"
            android:text="@string/create_product" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>