<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProductActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/edit_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_product_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/style_border"
                android:ems="10"
                android:hint="@string/create_product_name_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_product_brand"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/style_border"
                android:ems="10"
                android:hint="@string/product_brand_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_product_quantity"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/style_border"
                android:ems="10"
                android:hint="@string/product_quantity_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_product_price"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/style_border"
                android:ems="10"
                android:hint="@string/product_price_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_product_description"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/style_border"
                android:ems="10"
                android:hint="@string/product_description_hint"
                android:inputType="text" />

            <Spinner
                android:id="@+id/edit_product_color"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/style_border" />

            <Spinner
                android:id="@+id/edit_product_material"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/style_border" />

            <EditText
                android:id="@+id/edit_product_size"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/style_border"
                android:ems="10"
                android:hint="@string/product_size_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/edit_product_our_price"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/style_border"
                android:ems="10"
                android:hint="@string/product_our_price_hint"
                android:inputType="text"
                android:textSize="16sp" />

            <Button
                android:id="@+id/edit_product_save_changes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/style_border"
                android:text="@string/edit_product_save" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>