<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateInventoryActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/create_inventory_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/create_product_name_hint"
            android:inputType="text" />

        <Spinner
            android:id="@+id/create_inventory_state_spinner"
            android:layout_width="match_parent"
            android:layout_height="51dp" />

        <Button
            android:id="@+id/create_inventory_add_product_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addProduct"
            android:text="@string/add_product" />

        <Button
            android:id="@+id/create_inventory_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="createInventory"
            android:text="@string/create_inventory" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>